# buildtest

toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/libxdynlib/example_mt/xrp_dsp/lib/: CMakeLists.txt  xrp_dsp_hw_simple_xos_custom.c
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/: CMakeLists.txt  Makefile  README.txt  env.sh
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Device/: CMakeLists.txt
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Device/include/krl_translate/: astype_fun.h  async_copies_fun.h  atomic_fun.h  clang_ocl_declaration_macros.h  common_fun.h  conversions_fun.h  geometric_fun.h  integer_fun.h  kfunction_defs.h  local_mem_fun.h  math_fun.h  math_impl.h  miscellaneous_vector_fun.h  opencl_runtime.h  relational_fun.h  synchronization_fun.h  vector_data_load_store_fun.h  vector_functions.h  vector_typedefs.h  vector_types.h  xocl_buildin_math.h
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Device/lib/rt_interface/: CMakeLists.txt
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Device/lib/rt_interface_lib/: CMakeLists.txt
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Device/lib/rt_interface_src/: dma.c  lmem.c  sched.c  sync.c  sys.c
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/: CMakeLists.txt  xrp.xtensa_host.dtb.s
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/include/: cl_internal_objects.h  kernel.h  md5.h  mxpa_common.h  mxpa_debug.h  mxpa_profile.h  runtime.h  xt_device.h
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/include/CL/: cl.h
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/include/thread/: xocl_thread.h
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/lib/runtime_native/: CMakeLists.txt
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/lib/runtime_sim/: CMakeLists.txt
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/lib/runtime_src/: command_queue.cpp  context.cpp  device.cpp  event.cpp  kernel.cpp  md5.cpp  mem.cpp  oclwrapper.cpp  xt_device.cpp  xt_kernel.cpp
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/lib/runtime_xtensa_host_xos/: CMakeLists.txt
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/lib/tools/: CMakeLists.txt  tools.cpp
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/lib/xdynlib_native/: CMakeLists.txt
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/lib/xdynlib_sim/: CMakeLists.txt
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/lib/xdynlib_xtensa_host_xos/: CMakeLists.txt
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/lib/xrp_native/: CMakeLists.txt
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/lib/xrp_sim/: CMakeLists.txt
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Host/lib/xrp_xtensa_host_xos/: CMakeLists.txt
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Subsystems/android_host/: default.xml.patch
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Subsystems/android_host/XRC_Vision_Q7_AO/: Makefile.attr  subsys.xld  subsys.yml
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Subsystems/android_host/visionp6_ao/: Makefile.attr  subsys.xld  subsys.yml
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Subsystems/base/: README
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Subsystems/xtensa_host/: README
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Subsystems/xtensa_linux_host/visionp6_ao/: Makefile.attr  subsys.xld  subsys.yml
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Tests/: Makefile.android-host.common  Makefile.common  Makefile.x86_64-host.common  Makefile.xtensa-host.common  Makefile.xtensa-xos-host.common
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Tests/Examples/: Makefile.common  Makefile.x86_64-host  Makefile.xtensa-host  Makefile.xtensa-xos-host
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Tests/Examples/Bilateral5x5/: Bilateral5x5.c  Bilateral5x5.cl  Bilateral5x5_ext.cl  Bilateral5x5_ivp.c  Bilateral5x5_main.cpp  Makefile
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Tests/Examples/BilinearDownscale/: Bilinear.cl  Makefile
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Tests/Examples/BilinearUpscale/: Bilinear.c  Bilinear.cl  Bilinear_ext.cl  Bilinear_ivp.c  Bilinear_main.cpp
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Tests/Examples/BoxFilter3x3/: BoxFilter3x3.cl  BoxFilter3x3_ext.cl  BoxFilter3x3_ivp.c  BoxFilter3x3_main.cpp  Makefile
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Tests/Examples/Camera_pipe/: Camera_pipe.c  Camera_pipe.cl  Camera_pipe_ext.cl  Camera_pipe_main.cpp  Input.yuv  Makefile  Output.yuv  camera_pipe_parameters.h  lady_with_cap.yuv
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Tests/Examples/Common/: utils.cpp  utils.h
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Tests/Examples/Convolve3D_5x5/: Convolve3D_5x5.c  Convolve3D_5x5.cl  Convolve3D_5x5_ext.cl  (+3 more)
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Tests/TIE/: imap_vp6.tie  imap_vq7.tie  imap_vq8.tie
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Tests/VQ8_Examples/: Makefile.android-host  Makefile.common
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/Tests/scripts/: cmp-native-vq8.sh  cmp-native.sh  run-examples-perf-vq8.sh  run-examples-perf.sh  run-examples-vq8.sh  run-examples.sh  run-native-vq8.sh  run-native.sh
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/include/: host_interface.h  xocl_kernel_info.h
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/include/device/: dma.h  generic_container.h  idma_ext.h  lmem.h  misc.h  sync.h  sys.h  xdyn_lib_callback_if.h  xocl_kernel_cmd.h  xocl_runtime.h
toolchains/RI-2021.8-linux/XtensaTools/xtensa-elf/src/xocl/include/xrp/: xrp_atomic.h  xrp_opencl_ns.h
(+1657 files in other folders)
